kubernetes/local/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    name: postgre
spec:
  ports:
    - port: 5432
  selector:
    name: postgres
